# fastapi-skills

./: .env.example  .gitignore  README.md  api.py  config.py  main.py  pyproject.toml  requirements.txt  services.py
skills/: base.py  loader.py  matcher.py
skills/calculator/: SKILL.md  skill.py
static/: index.html
